--- a/client/src/assets/Footer.css
+++ b/client/src/assets/Footer.css
@@ -1,7 +1,7 @@
-footer{
-    width:100%;
-    height: 60px;
-    background-color: #61dafb;
-    position: absolute;
-    bottom: 0;
+footer {
+  width: 100%;
+  height: 60px;
+  background-color: #61dafb;
+  position: relative;
+  bottom: 0;
 }
