--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,8 @@
 .nftDetailBox {
   margin: 1rem !important;
 }
+
+.accordionContent {
+  background-color: #2185d014 !important;
+  padding: 1rem !important;
+}
